# docs/swagger.json
@@ -60,6 +60,11 @@
         },
         "/articles": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "get Articles",
                 "consumes": [
                     "application/json"
@@ -68,6 +73,22 @@
                     "application/json"
                 ],
                 "summary": "list Articles",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name search by q",
+                        "name": "name",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "name search by q",
+                        "name": "q",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -123,6 +144,25 @@
                 "message": {
                     "type": "string"
                 }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
+        },
+        "OAuth2Application": {
+            "type": "oauth2",
+            "flow": "application",
+            "tokenUrl": "https://api.stage.context.cloud.sap/uaa/oauth/token",
+            "scopes": {
+                "manage": " Grants read and write access",
+                "view": "  Grants read access"
             }
         }
     }
